# shortUrl

./: pyproject.toml
url_shortening/: manage.py
url_shortening/backend/: admin.py  models.py  urls.py  views.py
url_shortening/backend/migrations/: 0001_initial.py  0002_auto_20200620_1806.py
url_shortening/templates/: base.html  index.html
url_shortening/url_shortening/: asgi.py  settings.py  wsgi.py
