[tool.poetry]
name = "url-shortening"
version = "0.1.0"
description = "Сокращатель ссылок"
authors = ["w0rng <antonabramov2000@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "3.8"
django = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
